prevent button from wrapping on front-end

--- a/includes/block-editor/blocks/image-card/editor.scss
+++ b/includes/block-editor/blocks/image-card/editor.scss
@@ -27,6 +27,7 @@
 		padding: 0.25rem 1rem;
 		text-decoration: none;
 		transition: all 223ms ease-in-out;
+		white-space: nowrap;
 
 		& a {
 			border: 0;
